configurations/gateway-api/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: gateway-api
spec:
  parentRefs:
  - name: ingress
    sectionName: http
    namespace: gateway-api
    group: gateway.networking.k8s.io
    kind: Gateway
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301 # permanent redirect
    matches:
    - path:
        type: PathPrefix
        value: /
